v1.1c: Password display overflow fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,7 @@ p {
   color: hsl(252, 11%, 91%);
   vertical-align: middle;
   display: table-cell;
+  word-break: break-all;
 }
 
 .password-placeholder {
